fix: selection shift

--- a/projects/ngx-full-grid-example/src/app/app.component.scss
+++ b/projects/ngx-full-grid-example/src/app/app.component.scss
@@ -4,6 +4,6 @@
 }
 
 .container {
-  height: 600px;
+  height: 900px;
   overflow-y: auto;
 }
